tests/invalid/missing_cpp_header_std_import.wio
use std::assert::missing_cpp_header;

fn Entry() -> i32 {
    return 0;
}
